k8s/home/storage-class-patch.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: loki
spec:
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: local-path
        resources:
          requests:
            storage: 10Gi
